pi-cluster/cluster/apps/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: jellyfin-media
          persistentVolumeClaim:
            claimName: jellyfin-media
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.11.11
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8096
          volumeMounts:
            - name: jellyfin-config
              mountPath: /config
            - name: jellyfin-media
              mountPath: /media
          resources:
            requests:
              cpu: 200m
              memory: 1028Mi
            limits:
              memory: 4096Mi
