pi-cluster/cluster/apps/jellyfin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - name: http
      protocol: TCP
      port: 8096
