pi-cluster/cluster/apps/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
  name: jellyfin
  namespace: jellyfin
spec:
  ingressClassName: traefik
  rules:
    - host: "jellyfin.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
  tls:
    - hosts:
        - jellyfin.${SECRET_DOMAIN}
      secretName: jellyfin-tls
